fix(fluid-pipes-phase2): use mutable list in ClayFluidPipeBE + register TESR for all special fluid pipes
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>